--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "dev": "tsnd --require dotenv/config src/server.ts",
     "migrate": "npx sequelize-cli db:migrate",
     "seed": "npx sequelize-cli db:seed:all",
+    "seed:undo": "npx sequelize-cli db:seed:undo:all",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "migrate:down": "npx sequelize-cli db:migrate:undo:all",
+    "migrate:reset": "npm-run-all migrate:down migrate seed"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +27,7 @@
     "husky": "^9.0.11",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "npm-run-all": "^4.1.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.5",
